# mmwave_code

./: CMakeLists.txt  aip_functions.h  constants.h  generate_tx_signal.cpp  mmwave_array_test.cpp  mmwave_array_turnRxOn.cpp  mmwave_joint_txrx.cpp  mmwave_rx.cpp  mmwave_tx.cpp
